SF Primes/src/objects/Paper_Order_Lines__c.object
<CustomObject>
    <description>Created for Laser Paper Team</description>
    <fields>
        <fullName>Catalog_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Number</label>
        <referenceTo>Paper_Order_Catalog_Numbers__c</referenceTo>
        <relationshipLabel>Paper Order Lines</relationshipLabel>
        <relationshipName>Paper_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Paper_Fulfillment_Order__c</fullName>
        <label>Paper Fulfillment Order</label>
        <referenceTo>DS_LSR_Paper_Fulfillment_Order__c</referenceTo>
        <relationshipName>Web_UID</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_On__c</fullName>
        <label>Release On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_UID_Added__c</fullName>
        <label>Web UID Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_UID__c</fullName>
        <label>Web UID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>Paper Order Lines</label>
    <nameField>
        <displayFormat>POL-{00000}</displayFormat>
        <label>Paper Order Lines</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paper Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>